# ptb_mongo_docker_preset

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: docker-publish.yml  tests.yml
locale/: translation.en.yml
ptb_mongo_docker_preset/: __main__.py
ptb_mongo_docker_preset/utils/: commands.py  commodities.py  const.py  custom_middleware.py  db.py
tests/: test_custom_middleware.py  test_package.py
